--- a/app/src/main/res/layout-land/fragment_welcome.xml
+++ b/app/src/main/res/layout-land/fragment_welcome.xml
@@ -84,9 +84,7 @@
             android:textColor="@color/white"
             android:textSize="16sp"
             app:layout_columnWeight="1"
-            app:layout_gravity="end"
-            tools:layout_editor_absoluteX="8sp"
-            tools:layout_editor_absoluteY="838sp" />
+            app:layout_gravity="end" />
 
         <Button
             android:id="@+id/register_button"
