--- a/app/src/main/res/layout/menu_burger.xml
+++ b/app/src/main/res/layout/menu_burger.xml
@@ -7,6 +7,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:headerLayout="@layout/navigation_header"
-        app:menu="@menu/navigation_menu">
+        app:menu="@menu/menu_navigation">
     </android.support.design.widget.NavigationView>
 </layout>
