--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="pl.pollub.shoppinglist.activity.fragment.LoginFragment">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -103,9 +104,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="48sp"
                     android:layout_weight="1"
-                    android:backgroundTint="@android:color/transparent"
-                    android:elegantTextHeight="false"
-                    android:onClick="register"
                     android:text="Zarejestruj się!"
                     android:textAlignment="textStart"
                     android:textColor="@android:color/holo_blue_bright"
