--- a/app/src/main/res/layout/lists_list_item.xml
+++ b/app/src/main/res/layout/lists_list_item.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/relativList"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/shape_item"
     android:descendantFocusability="blocksDescendants"
-    android:orientation="vertical"
-    android:background="@drawable/shape_item">
+    android:orientation="vertical">
 
         <RelativeLayout
             android:id="@+id/relativ4"
