--- a/app/src/main/res/layout/lists_list_item.xml
+++ b/app/src/main/res/layout/lists_list_item.xml
@@ -97,7 +97,7 @@
                     android:layout_height="40dp"
                     android:layout_centerVertical="true"
                     android:layout_marginStart="6dp"
-                    android:layout_toEndOf="@+id/checkBox"
+                    android:layout_toEndOf="@+id/checkBoxStatus"
                     android:background="@mipmap/ls_icon"
                     android:foregroundGravity="center_vertical"
                     android:minWidth="40dp" />
