--- a/app/src/main/res/layout/lists_list_item.xml
+++ b/app/src/main/res/layout/lists_list_item.xml
@@ -25,6 +25,8 @@
                             android:id="@+id/list_progress"
                             android:layout_width="45dp"
                             android:layout_height="match_parent"
+                            android:layout_alignParentStart="true"
+                            android:layout_alignParentTop="true"
                             android:gravity="center"
                             android:text="0/0"
                             android:textColor="@android:color/holo_green_dark"
