Fix n+1, implement lastActiveAt time updating, use Parse Bolts Tasks

--- a/app/src/main/res/layout/fragment_friend_search.xml
+++ b/app/src/main/res/layout/fragment_friend_search.xml
@@ -35,14 +35,24 @@
                 android:text="Szukaj" />
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/empty_label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="Brak wyników"
+            android:textSize="18sp"
+            android:visibility="gone" />
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/search_list"
-            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_weight="1"
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
             tools:listitem="@layout/item_friend_search" />
 
         <ProgressBar
