--- a/app/src/main/res/layout/activity_add_shopping_list.xml
+++ b/app/src/main/res/layout/activity_add_shopping_list.xml
@@ -59,21 +59,81 @@
 
             </android.support.design.widget.TextInputLayout>
 
-            <Button
-                android:id="@+id/listDeadline"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/deadline_layout"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/list_description_layout"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="30dp"
-                android:text="Termin" />
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/notificationsLabel"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="30dp"
+                        android:layout_weight="1"
+                        android:text="Powiadomienia" />
+
+                    <ToggleButton
+                        android:id="@+id/toggleNotifications"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:checked="false"
+                        android:text="ToggleButton"
+                        android:textOff="Wyłączone"
+                        android:textOn="Włączone" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/listDeadline"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="5dp"
+                        android:layout_marginStart="30dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/rounded_button"
+                        android:text="Data"
+                        android:visibility="invisible" />
+
+                    <Button
+                        android:id="@+id/listDeadlineTimepickerBtn"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="30dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/rounded_button"
+                        android:onClick="showTimePickerDialog"
+                        android:text="Czas"
+                        android:visibility="invisible" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+
 
             <TextView
                 android:id="@+id/textView20"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
-                android:layout_below="@+id/listDeadline"
+                android:layout_below="@+id/deadline_layout"
                 android:layout_marginTop="28dp"
                 android:gravity="center_horizontal"
                 android:text="Ikonka" />
@@ -90,12 +150,14 @@
             <Button
                 android:id="@+id/saveNewList"
                 style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="300dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/setListImage"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="23dp"
-                android:background="@color/colorPrimary"
+                android:layout_marginRight="30dp"
+                android:layout_marginLeft="30dp"
+                android:background="@drawable/rounded_button"
                 android:backgroundTint="@color/colorPrimaryDark"
                 android:text="OK" />
 
