--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,13 +9,26 @@
         <item name="windowActionModeOverlay">true</item>
     </style>
 
-    <style name="TextLabel" parent="TextAppearance.AppCompat">
+    <style name="DarkTextInputLayout" parent="TextAppearance.AppCompat">
         <!-- Hint color and label color in FALSE state -->
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:textColorHint">@color/white</item>
-        <item name="android:textSize">20sp</item>
         <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
         <item name="colorAccent">@color/ActiveText</item>
         <item name="colorControlNormal">@color/white</item>
+        <item name="colorControlActivated">@color/ActiveText</item>
+    </style>
+
+    <style name="DarkHintText" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/ActiveText</item>
+    </style>
+
+    <style name="DarkEditText" parent="TextAppearance.AppCompat">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="colorControlNormal">@color/white</item>
+        <item name="colorControlHighlight">@color/white</item>
         <item name="colorControlActivated">@color/ActiveText</item>
     </style>
 
