--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -30,7 +30,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginBottom="8dp"
                 android:layout_marginTop="8dp"
-                android:theme="@style/TextLabel">
+                android:theme="@style/DarkTextInputLayout">
 
                 <EditText
                     android:id="@+id/login_input"
@@ -49,7 +49,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginBottom="8dp"
                 android:layout_marginTop="8dp"
-                android:theme="@style/TextLabel">
+                android:theme="@style/DarkTextInputLayout">
 
                 <EditText
                     android:id="@+id/password_input"
