--- a/app/src/main/res/layout/activity_add_shopping_list.xml
+++ b/app/src/main/res/layout/activity_add_shopping_list.xml
@@ -84,8 +84,9 @@
 
                     <ToggleButton
                         android:id="@+id/toggleNotifications"
-                        android:layout_width="wrap_content"
+                        android:layout_width="138dp"
                         android:layout_height="wrap_content"
+                        android:layout_marginRight="20dp"
                         android:layout_weight="1"
                         android:checked="false"
                         android:text="ToggleButton"
@@ -94,69 +95,51 @@
 
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.5"
-                    android:orientation="horizontal">
-
-                    <Button
-                        android:id="@+id/listDeadline"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="5dp"
-                        android:layout_marginStart="30dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/rounded_button"
-                        android:text="Data"
-                        android:visibility="invisible" />
-
-                    <Button
-                        android:id="@+id/listDeadlineTimepickerBtn"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="30dp"
-                        android:layout_marginLeft="5dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/rounded_button"
-                        android:onClick="showTimePickerDialog"
-                        android:text="Czas"
-                        android:visibility="invisible" />
-                </LinearLayout>
-
             </LinearLayout>
 
 
-
-            <TextView
-                android:id="@+id/textView20"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
                 android:layout_below="@+id/deadline_layout"
-                android:layout_marginTop="28dp"
-                android:gravity="center_horizontal"
-                android:text="Ikonka" />
+                android:layout_weight="0.5"
+                android:orientation="horizontal"
+                android:id="@+id/linearLayout">
 
-            <ImageButton
-                android:id="@+id/setListImage"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_below="@+id/textView20"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="14dp"
-                app:srcCompat="@android:drawable/ic_menu_add" />
+                <Button
+                    android:id="@+id/listDeadline"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginStart="30dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/rounded_button"
+                    android:text="Data"
+                    android:visibility="invisible" />
+
+                <Button
+                    android:id="@+id/listDeadlineTimepickerBtn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="30dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/rounded_button"
+                    android:onClick="showTimePickerDialog"
+                    android:text="Czas"
+                    android:visibility="invisible" />
+            </LinearLayout>
 
             <Button
                 android:id="@+id/saveNewList"
                 style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/setListImage"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="23dp"
-                android:layout_marginRight="30dp"
-                android:layout_marginLeft="30dp"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/linearLayout"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="100dp"
                 android:background="@drawable/rounded_button"
                 android:backgroundTint="@color/colorPrimaryDark"
                 android:text="OK" />
