--- a/app/src/main/res/layout/lists_list_item.xml
+++ b/app/src/main/res/layout/lists_list_item.xml
@@ -68,7 +68,7 @@
                             android:layout_alignParentTop="true"
                             android:gravity="center_vertical"
                             android:paddingLeft="5dp"
-                            android:text="Udostępniono dla :"
+                            android:text="Współdzielenie z:"
                             android:textStyle="bold" />
 
                         <TextView
