--- a/app/src/main/res/layout/activity_add_shopping_list.xml
+++ b/app/src/main/res/layout/activity_add_shopping_list.xml
@@ -132,7 +132,7 @@
 
             <Button
                 android:id="@+id/saveNewList"
-                style="@style/Widget.AppCompat.Button.Colored"
+                style="@style/DarkCompatButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
@@ -141,8 +141,7 @@
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="100dp"
                 android:background="@drawable/rounded_button"
-                android:backgroundTint="@color/colorPrimaryDark"
-                android:text="OK" />
+                android:text="@string/ok" />
 
         </RelativeLayout>
 
