--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -32,7 +32,7 @@
             android:layout_marginStart="14dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:hint="username"
+            android:text="@string/not_logged_in"
             android:textSize="18sp"
             android:textStyle="bold" />
     </LinearLayout>
