--- a/app/src/main/res/layout/item_friend_approve.xml
+++ b/app/src/main/res/layout/item_friend_approve.xml
@@ -35,7 +35,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center_vertical"
-                    android:text="active"
+                    android:text="aktywny"
                     android:textSize="18sp" />
                 <TextView
                     android:id="@+id/lastActiveAt_approve"
