--- a/app/src/main/res/layout/activity_custom_products.xml
+++ b/app/src/main/res/layout/activity_custom_products.xml
@@ -5,7 +5,7 @@
     android:id="@+id/custom_products_list_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pl.pollub.shoppinglist.activity.CustomProductsListActivity">
+    tools:context="pl.pollub.shoppinglist.activity.CustomProductsActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
