--- a/app/src/main/res/layout/fragment_friend_search.xml
+++ b/app/src/main/res/layout/fragment_friend_search.xml
@@ -49,8 +49,8 @@
             android:id="@+id/search_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
+            android:layout_marginLeft="@dimen/left_right_margin"
+            android:layout_marginRight="@dimen/left_right_margin"
             android:layout_weight="1"
             app:layoutManager="android.support.v7.widget.LinearLayoutManager"
             tools:listitem="@layout/item_friend_search" />
