--- a/app/src/main/res/layout/fragment_friend_approve.xml
+++ b/app/src/main/res/layout/fragment_friend_approve.xml
@@ -19,12 +19,21 @@
             android:layout_weight="1"
             tools:listitem="@layout/item_friend_approve" />
 
-        <ProgressBar
-            android:id="@+id/progress_bar"
-            style="?android:attr/progressBarStyle"
+        <TextView
+            android:id="@+id/empty_label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/no_invites"
+            android:textSize="18sp"
+            android:visibility="gone" />
+
+        <include
+            android:id="@+id/spinner_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="100dp"
+            layout="@layout/layout_loading_spinner"
             android:visibility="gone" />
 
     </LinearLayout>
