--- a/app/src/main/res/layout/fragment_friend_search.xml
+++ b/app/src/main/res/layout/fragment_friend_search.xml
@@ -35,16 +35,6 @@
                 android:text="Szukaj" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/empty_label"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="@string/no_results"
-            android:textSize="18sp"
-            android:visibility="gone" />
-
         <android.support.v7.widget.RecyclerView
             android:id="@+id/search_list"
             android:layout_width="match_parent"
@@ -55,12 +45,21 @@
             app:layoutManager="android.support.v7.widget.LinearLayoutManager"
             tools:listitem="@layout/item_friend_search" />
 
-        <ProgressBar
-            android:id="@+id/progress_bar"
-            style="?android:attr/progressBarStyle"
+        <TextView
+            android:id="@+id/empty_label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/no_results"
+            android:textSize="18sp"
+            android:visibility="gone" />
+
+        <include
+            android:id="@+id/spinner_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="100dp"
+            layout="@layout/layout_loading_spinner"
             android:visibility="gone" />
     </LinearLayout>
 </layout>
