--- a/app/src/main/res/drawable-mdpi/shape_item_grey.xml
+++ b/app/src/main/res/drawable-mdpi/shape_item_grey.xml
@@ -4,23 +4,19 @@
     android:shape="rectangle"   >
 
     <solid
-        android:color="@android:color/darker_gray" >
-    </solid>
+        android:color="@android:color/darker_gray" />
 
     <stroke
         android:width="2dp"
-        android:color="#C4CDE0" >
-    </stroke>
+        android:color="#C4CDE0" />
 
     <padding
         android:left="5dp"
         android:top="5dp"
         android:right="5dp"
-        android:bottom="5dp"    >
-    </padding>
+        android:bottom="5dp" />
 
     <corners
-        android:radius="10dp"   >
-    </corners>
+        android:radius="10dp" />
 
 </shape>
