--- a/app/src/main/res/drawable/shape_item.xml
+++ b/app/src/main/res/drawable/shape_item.xml
@@ -1,26 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle"   >
+    android:shape="rectangle">
 
     <solid
-        android:color="@color/colorPrimary" >
-    </solid>
+        android:color="@color/colorPrimary" />
 
     <stroke
         android:width="2dp"
-        android:color="#C4CDE0" >
-    </stroke>
+        android:color="#C4CDE0" />
 
     <padding
         android:left="5dp"
         android:top="5dp"
         android:right="5dp"
-        android:bottom="5dp"    >
-    </padding>
+        android:bottom="5dp" />
 
     <corners
-        android:radius="10dp"   >
-    </corners>
+        android:radius="10dp" />
 
 </shape>
