--- a/app/src/main/res/layout/fragment_friend_search.xml
+++ b/app/src/main/res/layout/fragment_friend_search.xml
@@ -12,8 +12,11 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="6dp">
+            android:layout_marginBottom="4dp"
+            android:layout_marginEnd="@dimen/single_left_right_margin"
+            android:layout_marginStart="@dimen/single_left_right_margin"
+            android:layout_marginTop="4dp"
+            android:orientation="horizontal">
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/text_input_layout"
@@ -39,11 +42,11 @@
             android:id="@+id/search_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/left_right_margin"
-            android:layout_marginRight="@dimen/left_right_margin"
+            android:layout_marginLeft="@dimen/single_left_right_margin"
+            android:layout_marginRight="@dimen/single_left_right_margin"
             android:layout_weight="1"
             app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-            tools:listitem="@layout/item_friend_search" />
+            tools:listitem="@layout/item_friend_sa" />
 
         <TextView
             android:id="@+id/empty_label"
