--- a/app/src/main/res/layout/item_friend_sa.xml
+++ b/app/src/main/res/layout/item_friend_sa.xml
@@ -10,7 +10,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/profile_image_list"
+            android:id="@+id/profile_image_sa"
             android:layout_width="42dp"
             android:layout_height="42dp"
             android:layout_gravity="center"
@@ -28,7 +28,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/username_list"
+                android:id="@+id/username_sa"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
@@ -49,7 +49,7 @@
                     app:srcCompat="@drawable/ic_access_time_24dp" />
 
                 <TextView
-                    android:id="@+id/lastActiveAt_list"
+                    android:id="@+id/last_active_at_sa"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -60,22 +60,12 @@
 
         </LinearLayout>
 
-        <ImageButton
-            android:id="@+id/actionMessageButton_list"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="Message"
-            android:tint="@color/cardview_dark_background"
-            app:srcCompat="@drawable/ic_message_24dp" />
-
-        <ImageButton
-            android:id="@+id/actionDeleteButton_list"
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/action_button_sa"
+            android:layout_width="140dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:contentDescription="Delete"
-            android:tint="@color/cardview_dark_background"
-            app:srcCompat="@drawable/ic_delete_forever_24dp" />
+            android:text="Button" />
 
     </LinearLayout>
 
