--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="left_right_margin">16dp</dimen>
+    <dimen name="single_left_right_margin">8dp</dimen>
 </resources>
